<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RuleMainviewActivity" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <TextView
        android:id="@+id/textViewAktion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:gravity="center"
        android:text="@string/HomeHeaderAktion"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textViewOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:gravity="center"
        android:text="@string/HomeHeaderOption"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewAuslöser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:gravity="center"
        android:text="@string/HomeHeaderAuslöser"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    

</LinearLayout>

<GridView
        android:id="@+id/gridView1"
        android:layout_width="match_parent"
        android:layout_height="0dip" 
        android:numColumns="1" 
        android:layout_weight="11">
    </GridView>

    <Button
        android:id="@+id/addbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neueRegel"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/addbuttontextsize"
        android:background="@drawable/regelbaubuttonspeichernshape"
        android:drawableLeft="@drawable/plus" />
    
</LinearLayout>
