<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent" 
        android:orientation="horizontal"
        android:layout_weight="2">

        <TextView
            android:id="@+id/ueberschrift1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/Operator"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/ueberschrift2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/Einheit"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/ueberschrift3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="right"
            android:text="@string/Wert"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent" 
        android:orientation="horizontal"
        android:layout_weight="0.5">

        <ListView
            android:id="@+id/listView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" >
        </ListView>
        
        <ListView
            android:id="@+id/listView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" >
        </ListView>
         
         <ListView
            android:id="@+id/listView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" >
        </ListView>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="2" >

        <Button
            android:id="@+id/kleinerFertigButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight="5">
        </Button>
        
    </LinearLayout>

</LinearLayout>
